[gd_scene load_steps=5 format=2]

[ext_resource path="res://Building/Child/Barrack/Barrack.tscn" type="PackedScene" id=1]
[ext_resource path="res://Building/Child/Tower/Tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Building/Child/Core/Core.tscn" type="PackedScene" id=3]
[ext_resource path="res://Battlefield/TeamArea.gd" type="Script" id=4]

[node name="TeamArea" type="YSort" groups=["arena_team"]]
script = ExtResource( 4 )
team = 0

[node name="CreepSpawnerPosition" type="Position2D" parent="."]
position = Vector2( 176, 128 )

[node name="TopCreepSpawner" type="Position2D" parent="."]

[node name="MidCreepSpawner" type="Position2D" parent="."]

[node name="BottomCreepSpawner" type="Position2D" parent="."]

[node name="BuildingContainer" type="YSort" parent="."]

[node name="Core" parent="BuildingContainer" instance=ExtResource( 3 )]

[node name="TopBarrack" parent="BuildingContainer" instance=ExtResource( 1 )]

[node name="MidBarrack" parent="BuildingContainer" instance=ExtResource( 1 )]

[node name="BottomBarrack" parent="BuildingContainer" instance=ExtResource( 1 )]

[node name="TopTower1" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="TopTower2" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="TopTower3" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="MidTower1" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="MidTower2" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="MidTower3" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="BottomTower1" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="BottomTower2" parent="BuildingContainer" instance=ExtResource( 2 )]

[node name="BottomTower3" parent="BuildingContainer" instance=ExtResource( 2 )]
